build_output.txt

> viralogic-ai@0.1.0 build
> next build

▲ Next.js 16.1.4 (Turbopack)
- Environments: .env

  Creating an optimized production build ...
Error: Cannot apply unknown utility class `bg-brand-dark`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [2m[at onInvalidCandidate (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:21:1314)][0m
    [2m[at Te (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:16:36652)][0m
    [2m[at C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:21:355][0m
    [2m[at Rr (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:3:1718)][0m
    [2m[at _ (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:3:1377)][0m
    [2m[at $e (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:21:172)][0m
    [2m[at un (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:38:294)][0m
    [2m[at process.processTicksAndRejections (node:internal/process/task_queues:105:5)][0m
    [2m[at async cn (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\tailwindcss\dist\lib.js:38:631)][0m
    [2m[at async Xr (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\@tailwindcss\node\dist\index.js:10:3417)][0m

> Build error occurred
Error: Turbopack build failed with 2 errors:
./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\src\app\globals.css:1:1: Cannot apply unknown utility class `bg-brand-dark`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    at Input.error (node_modules/postcss/lib/input.js:135:16) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\node_modules_fe693df6._.js:4651:22]
    at Root.error (node_modules/postcss/lib/node.js:146:32) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\node_modules_fe693df6._.js:928:38]
    [at Object.Once (C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\node_modules\@tailwindcss\postcss\dist\index.js:10:6911)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:105:5)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\node_modules_fe693df6._.js:6206:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


./src/components/PayOSModal.tsx:7:1
Module not found: Can't resolve '../lib/payos'
[0m [90m  5 |[39m [36mimport[39m { [33mX[39m[33m,[39m [33mCheckCircle[39m[33m,[39m [33mAlertCircle[39m[33m,[39m [33mExternalLink[39m[33m,[39m [33mMail[39m } [36mfrom[39m [32m'lucide-react'[39m[33m;[39m
 [90m  6 |[39m [36mimport[39m { [33mButton[39m } [36mfrom[39m [32m'./Button'[39m[33m;[39m
[31m[1m>[22m[39m[90m  7 |[39m [36mimport[39m { createPaymentLink[33m,[39m pollPaymentStatus[33m,[39m generateOrderCode } [36mfrom[39m [32m'../lib/payos'[39m[33m;[39m
 [90m    |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m  8 |[39m [36mimport[39m type { [33mPaymentResponse[39m } [36mfrom[39m [32m'../lib/payos'[39m[33m;[39m
 [90m  9 |[39m
 [90m 10 |[39m [36minterface[39m [33mPayOSModalProps[39m {[0m



Import traces:
  Client Component Browser:
    ./src/components/PayOSModal.tsx [Client Component Browser]
    ./src/app/upsell/page.tsx [Client Component Browser]
    ./src/app/upsell/page.tsx [Server Component]

  Client Component SSR:
    ./src/components/PayOSModal.tsx [Client Component SSR]
    ./src/app/upsell/page.tsx [Client Component SSR]
    ./src/app/upsell/page.tsx [Server Component]

https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\SMIZXE PERSONAL FOLDER\project code kiem tien\ViraLogic AI\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31])
    at <unknown> (./src/components/PayOSModal.tsx:7:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
